// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuantLabPanel (Q-058-NEW snapshot precondition) > renders error state when fundamentals fetch rejects 1`] = `
<div
  class="rounded-2xl border border-slate-800 bg-gradient-to-b from-slate-900/80 to-slate-950/90 overflow-hidden shadow-2xl"
>
  <div
    class="px-4 sm:px-6 py-4 border-b border-slate-800 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
  >
    <div>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-[10px] uppercase tracking-[0.2em] text-blue-400/90 font-semibold"
        >
          Quant Lab
        </span>
        <span
          class="text-[10px] px-2 py-0.5 rounded-full bg-slate-800 text-slate-500 font-mono"
        >
          MSFT
        </span>
      </div>
      <h2
        class="text-lg font-bold text-white mt-1"
      >
        MSFT
      </h2>
      <p
        class="text-xs text-slate-500 mt-0.5"
      />
    </div>
    <button
      class="inline-flex items-center gap-2 self-start px-3 py-2 rounded-lg border border-slate-700 text-xs font-medium text-slate-300 hover:bg-slate-800 disabled:opacity-50"
      type="button"
    >
      <svg
        class="lucide lucide-refresh-cw w-3.5 h-3.5 "
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
        />
        <path
          d="M21 3v5h-5"
        />
        <path
          d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
        />
        <path
          d="M8 16H3v5"
        />
      </svg>
      Refresh
    </button>
  </div>
  <div
    class="flex flex-wrap gap-1 px-3 sm:px-4 py-2 border-b border-slate-800/80 bg-slate-950/40"
  >
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors bg-blue-600 text-white"
      type="button"
    >
      Summary
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Technicals & RS
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Financials
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Valuation
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      LLM Agents
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Codex frameworks
    </button>
  </div>
  <div
    class="p-4 sm:p-6"
  >
    <div
      class="rounded-xl border border-red-500/30 bg-red-950/20 p-4 text-sm text-red-200/90"
    >
      fundamentals_unavailable
      <p
        class="text-xs text-red-300/60 mt-2"
      >
        ETFs and ADRs sometimes omit full statements; try a common US common stock (e.g. AAPL, MSFT).
      </p>
    </div>
  </div>
</div>
`;

exports[`QuantLabPanel (Q-058-NEW snapshot precondition) > renders loading skeleton with tabs while fundamentals fetch is in flight 1`] = `
<div
  class="rounded-2xl border border-slate-800 bg-gradient-to-b from-slate-900/80 to-slate-950/90 overflow-hidden shadow-2xl"
>
  <div
    class="px-4 sm:px-6 py-4 border-b border-slate-800 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
  >
    <div>
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-[10px] uppercase tracking-[0.2em] text-blue-400/90 font-semibold"
        >
          Quant Lab
        </span>
        <span
          class="text-[10px] px-2 py-0.5 rounded-full bg-slate-800 text-slate-500 font-mono"
        >
          AAPL
        </span>
      </div>
      <h2
        class="text-lg font-bold text-white mt-1"
      >
        AAPL
      </h2>
      <p
        class="text-xs text-slate-500 mt-0.5"
      />
    </div>
    <button
      class="inline-flex items-center gap-2 self-start px-3 py-2 rounded-lg border border-slate-700 text-xs font-medium text-slate-300 hover:bg-slate-800 disabled:opacity-50"
      disabled=""
      type="button"
    >
      <svg
        class="lucide lucide-refresh-cw w-3.5 h-3.5 animate-spin"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
        />
        <path
          d="M21 3v5h-5"
        />
        <path
          d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
        />
        <path
          d="M8 16H3v5"
        />
      </svg>
      Refresh
    </button>
  </div>
  <div
    class="flex flex-wrap gap-1 px-3 sm:px-4 py-2 border-b border-slate-800/80 bg-slate-950/40"
  >
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors bg-blue-600 text-white"
      type="button"
    >
      Summary
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Technicals & RS
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Financials
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Valuation
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      LLM Agents
    </button>
    <button
      class="px-3 py-1.5 rounded-lg text-xs font-medium transition-colors text-slate-400 hover:text-white hover:bg-slate-800/80"
      type="button"
    >
      Codex frameworks
    </button>
  </div>
  <div
    class="p-4 sm:p-6"
  >
    <div
      class="space-y-3 animate-pulse"
    >
      <div
        class="h-24 bg-slate-800/60 rounded-xl"
      />
      <div
        class="h-40 bg-slate-800/40 rounded-xl"
      />
    </div>
  </div>
</div>
`;
